--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ endif()
 project(SmashSoda LANGUAGES CXX)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Force C++14
-set(CMAKE_CXX_STANDARD 14)
+# Force C++17 (matching the subdirectory requirement)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Detect architecture for output directories
@@ -17,21 +17,21 @@ if(NOT CMAKE_VS_PLATFORM_NAME)
     if(CMAKE_SIZEOF_VOID_P EQUAL 8)
         set(ARCH "x64")
     else()
-        set(ARCH "x86")
+        set(ARCH "Win32")
     endif()
 else()
     set(ARCH "${CMAKE_VS_PLATFORM_NAME}")
 endif()
 
-# Output folders
+# Output folders (using standard CMake case: Release, Debug)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${ARCH}/lib")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${ARCH}/lib")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/${ARCH}/debug")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/${ARCH}/release")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/${ARCH}/Debug")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/${ARCH}/Release")
 
 # Add dependencies if they have their own CMakeLists
-if(EXISTS "${CMAKE_SOURCE_DIR}/dependencies/CMakeLists.txt")
-    add_subdirectory(dependencies)
+if(EXISTS "${CMAKE_SOURCE_DIR}/Dependencies/CMakeLists.txt")
+    add_subdirectory(Dependencies)
 endif()
 
 # Add main project
